--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "test:automated:watch": "npm run test:automated -- --auto-watch --no-single-run",
     "version": "version-changelog CHANGELOG.md && changelog-verify CHANGELOG.md && git add CHANGELOG.md"
   },
+  "dependencies": {
+    "@ungap/array-iterator": "^0.2.0"
+  },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
