--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,6 +1,7 @@
 {
 	"*.js": ["eslint --fix"],
 	"*.md": ["prettier --ignore-path .gitignore --write"],
+	"!(package)*.json": ["prettier --ignore-path .gitignore --write"],
 	".!(npm|browserslist)*rc": [
 		"prettier --ignore-path .gitignore --parser json --write"
 	]
