--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "main": "cjs/index.js",
   "module": "esm/index.js",
+  "types": "esm/index.d.ts",
   "directories": {
     "test": "test"
   },
@@ -28,13 +29,14 @@
     "build": "rollup --config rollup.config.js",
     "lint": "eslint '{index,lib/**/*,test/**/*}.js'",
     "module-check": "node -e 'require(\"string-match-all\");' && node --input-type=module -e 'import \"string-match-all\";'",
-    "prepublishOnly": "npm run build && npm run module-check",
+    "prepublishOnly": "npm run build && npm run lint:types && npm run module-check",
     "postpublish": "GITHUB_TOKEN=$GITHUB_RELEASE_TOKEN github-release-from-changelog",
     "release": "np --no-release-draft",
     "test": "npm run lint && npm run test:automated",
     "test:automated": "BABEL_ENV=test karma start",
     "test:automated:watch": "npm run test:automated -- --auto-watch --no-single-run",
-    "version": "if [ $(git rev-parse --abbrev-ref HEAD) == 'master' ]; then version-changelog CHANGELOG.md && changelog-verify CHANGELOG.md && git add CHANGELOG.md; else echo; fi"
+    "version": "if [ $(git rev-parse --abbrev-ref HEAD) == 'master' ]; then version-changelog CHANGELOG.md && changelog-verify CHANGELOG.md && git add CHANGELOG.md; else echo; fi",
+    "lint:types": "tsc"
   },
   "dependencies": {
     "@ungap/array-iterator": "^0.2.0",
@@ -52,6 +54,9 @@
     "@rollup/plugin-babel": "^5.2.1",
     "@rollup/plugin-commonjs": "^15.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
+    "@types/karma-fixture": "^0.2.5",
+    "@types/mocha": "^8.2.3",
+    "@types/node": "^16.3.0",
     "changelog-verify": "^1.1.2",
     "core-js": "^2.6.5",
     "eslint": "^7.31.0",
@@ -65,6 +70,7 @@
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-unicorn": "^31.0.0",
     "esm": "^3.0.51",
+    "execa": "^5.1.1",
     "github-release-from-changelog": "^2.1.1",
     "husky": "^4.3.0",
     "karma": "^5.2.3",
@@ -85,6 +91,7 @@
     "rollup-plugin-istanbul": "^3.0.0",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-globals": "^1.4.0",
+    "typescript": "^4.3.5",
     "version-changelog": "^3.1.1"
   },
   "engines": {
