--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,7 +1,6 @@
 {
 	"*.js": ["eslint --fix"],
-	"*.md": ["prettier --ignore-path .gitignore --write"],
-	"!(package)*.json": ["prettier --ignore-path .gitignore --write"],
+	"*.(md|json)": ["prettier --ignore-path .gitignore --write"],
 	".!(npm|browserslist)*rc": [
 		"prettier --ignore-path .gitignore --parser json --write"
 	]
